[package]
name = "bu"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.53", features = ["derive", "cargo"] }
clap_complete = "4.5"
dirs = "6.0.0"
hex = "0.4.3"
reqwest = { version = "0.12.28", features = ["blocking", "rustls-tls"] }
sha2 = "0.10.9"
starlark = "0.13.0"
tempfile = "3.24.0"
thiserror = "2.0.17"
tracing = "0.1.44"
tracing-subscriber = "0.3.22"
which = "8.0.0"
zstd = "0.13.3"

[dev-dependencies]
tempfile = "3.24.0"
